--- a/002_Tu_primera_web_app_con_spring_boot/spring_web_mvc/src/main/resources/templates/product-list.html
+++ b/002_Tu_primera_web_app_con_spring_boot/spring_web_mvc/src/main/resources/templates/product-list.html
@@ -10,13 +10,13 @@
 
 <div class="container text-center mt-5">
     <div class="row">
-        <div class="col">
+        <div class="col-2">
 
 
         </div>
-        <div class="col">
+        <div class="col-8">
 
-     <!-- Tabla de productos -->
+         <!-- Tabla de productos -->
 
             <table class="table">
                 <thead>
@@ -48,7 +48,7 @@
 
 
         </div>
-        <div class="col">
+        <div class="col-2">
 
         </div>
     </div>
